<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>minion_cartographer</name>
  <version>2.1.0</version>
  <description>
    ROS 2 launch scripts for cartographer
  </description>
  <maintainer email="ruichao.wu@ipa.fraunhofer.de">ruichao</maintainer>
  <license>Todo</license>
  <author email="ruichao.wu@ipa.fraunhofer.de">ruichao</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
